# algorithmic_algebra

./: CMakeLists.txt  FindGMP.cmake  README.md
header/: classes.h  polynomials.h  type.h
test/: test.cpp
